Fix new filter labels on iOS

--- a/src/EDOverwatch Web/ClientApp/src/app/components/home-v2/home-v2.component.scss
+++ b/src/EDOverwatch Web/ClientApp/src/app/components/home-v2/home-v2.component.scss
@@ -89,11 +89,9 @@ mat-form-field {
         width: unset;
         padding: unset;
         margin: unset;
-        font-size: var(--mat-form-field-outlined-label-text-populated-size);
+        font-size: 12px;
         color: rgba(255, 255, 255, 0.6);
         font-weight: var(--mdc-outlined-text-field-label-text-weight);
-        transform: scale(var(--mat-mdc-form-field-floating-label-scale, 0.75));
-        -webkit-font-smoothing: antialiased;
         padding-left: 4px;
         padding-right: 4px;
     }
